# loom

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.docs.txt  requirements.txt  tox.ini
.github/: README.md
.github/workflows/: test.yaml
docs/: Makefile  code.md  conf.py  contributing.md  generate_figures.py  getting-started.md  index.md  requirements.txt  visualization.md  whats-in-the-box.md
docs/_static/: custom.css
loomlib/: __init__.py
loomlib/action/: __init__.py  dispatch.py
loomlib/compat/: pydantic.py  regex.py
loomlib/compiler/: __init__.py  compiler.py
loomlib/encoder/: __init__.py  batch.py  branch_embedding.py  embeddings.py  loom_encoder.py
loomlib/fn/: __init__.py  constraints.py  fnspace.py
loomlib/head/: __init__.py  loom_head.py
loomlib/schema/: __init__.py  _factory.py  model.py  union.py
loomlib/slice/: __init__.py  allocation.py
loomlib/types/: __init__.py  base.py  bit_integer.py  boolean.py  categorical.py  continuous_scalar.py  scalar.py
loomlib/utils/: __init__.py  simplex.py  stats.py
loomlib/viz/: __init__.py  allocation.py  batch.py  colors.py  decode.py  embeddings.py  logits.py  loss.py  token_grid.py
notebooks/: decoder_types.ipynb  encoder_prototype.ipynb  regex_structured_extraction.ipynb
papers/: Makefile
scripts/: example.py
tests/: overview.py  test_compiler.py  test_embeddings.py  test_encoder.py  test_fn.py  test_integration.py  test_native_types.py  test_pydantic_compat.py  test_regex_compat.py  test_schema.py  test_slice.py  test_types.py
(+18 files in other folders)
